--- a/main.css
+++ b/main.css
@@ -1,4 +1,12 @@
 img {
-    height: 200px;
-    width: 150px;
+    height: 150px;
+    width: 100px;
+}
+
+#checkboxes {
+    margin-left: 120px;
+}
+
+#navbar {
+    background-color: rgb(185, 231, 247);
 }
