--- a/main.css
+++ b/main.css
@@ -24,7 +24,8 @@ body {
 #alert {
     position: absolute;
     z-index: 999999;
-    margin-left: 300px;
+    margin-left: 400px;
+    margin-top: 100px;
 }
 
 #users {
@@ -39,6 +40,10 @@ body {
     border-top-color: #dbdbdb;
     background-color: #bfbfbf;
     padding: 2px;
+}
+
+#textInput {
+    width: 70%;
 }
 
 .button {
